--- a/src/main/resources/templates/appointmentList.html
+++ b/src/main/resources/templates/appointmentList.html
@@ -29,13 +29,13 @@
                 </thead>
                 <tbody>
                 <tr th:each="patient: ${patients}">
-                    <td><a class="btn btn-primary btn-xs" th:href="@{/view/} + ${patient.id}" th:text="${patient.id}"></a></td>
+                    <td><a class="btn btn-primary btn-xs" th:href="@{'/view/' + ${patient.id}}" th:text="${patient.id}"></a></td>
 <!--                    <td th:text="${patient.id}"></td>-->
                     <td th:text="${patient.name}"></td>
                     <td th:text="${patient.lastName}"></td>
                     <td th:text="${patient.birthdate}"></td>
-                    <td><a class="btn btn-primary btn-sm" href="/edit/1">Edit</a></td>
-                    <td><a class="btn btn-danger btn-sm" href="/delete/1" onclick="return confirm('Are you sure you want to delete?');">Delete</a></td>
+                    <td><a class="btn btn-primary btn-sm" th:href="@{'/edit/' + ${patient.id}}">Edit</a></td>
+                    <td><a class="btn btn-danger btn-sm" th:href="@{'/delete/' + ${patient.id}}" th:text="'Delete'" onclick="return confirm('Are you sure you want to delete?');"></a></td>
                 </tr>
                 </tbody>
             </table>
