--- a/src/main/resources/templates/appointmentView.html
+++ b/src/main/resources/templates/appointmentView.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>View Appointment</title>
+    <title th:text="${title}"></title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
@@ -9,8 +9,7 @@
 <div class="container py-4">
 
     <div>
-        <div>View Appointment</div>
-
+        <div>Appointment details</div>
             <ul class="list-group">
                 <li class="list-group-item active" th:text="${patient.name} + ' ' + ${patient.lastName}"></li>
                 <li class="list-group-item" th:text="${patient.birthdate}"></li>
@@ -20,6 +19,5 @@
     </div>
 
 </div>
-
 </body>
 </html>
